reglas de navegacion del bonton regresar

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -16,8 +16,6 @@
         <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
            <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
             <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
-
-
         </ul>
         <div class="uk-navbar-left uk-hidden@m">
             <a class="uk-navbar-toggle" uk-navbar-toggle-icon="" href="" uk-toggle="target: #menu" type="button"/>
@@ -35,6 +33,7 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="tablas.css"/>
         <h:outputStylesheet library="css" name="graficas.css"/>
+
         <!--CARDS WRAPPER-->
         <section class="uk-section uk-section-default uk-section-default uk-padding-remove-top " data-uk-filter="target: .js-filter">
             <div class="uk-container uk-container-expand">
@@ -68,6 +67,9 @@
                             <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom"><span class="uk-text-bold">Grupo:</span> #{profesorGrupoControlador.grupoModelo.grupo}</p>
                         </div>
                     </div>
+                </div>
+                <div class="botones uk-width-2-3@m">
+                    <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
                 </div>
                 <!--CARDS WRAPPER-->
                 <h:panelGroup layout="block" styleClass="uk-margin uk-grid uk-child-width-1-1@m">
