--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -90,16 +90,16 @@
             <div class="uk-container padding-contenedor">
                 <div uk-filter="target: .js-filter" >
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center">
-                        <li uk-filter-control=".ordenar" uk-tooltip="Order Words" class="uk-animation-toggle uk-active" tabindex="0" style="display: #{empty tareaOracionesControlador.tareaOracionesModeloLista ? 'none' : 'block'}">
+                        <li uk-filter-control=".ordenar" uk-tooltip="#{alumno['more.activity.title.order.prayer']}" class="uk-animation-toggle uk-active" tabindex="0" style="display: #{empty tareaOracionesControlador.tareaOracionesModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".relacion-imagen" uk-tooltip="Relacionar Imagen" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarControlador.relacionarModeloLista ? 'none' : 'block'}">
+                        <li uk-filter-control=".relacion-imagen" uk-tooltip="#{alumno['more.activity.title.match.image']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarControlador.relacionarModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0" style="display: #{empty hablarControlador.hablarModeloLista ? 'none' : 'block'}">
+                        <li uk-filter-control=".talking" uk-tooltip="#{alumno['more.activity.title.speake']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty hablarControlador.hablarModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".complete-sentences" uk-tooltip="Completar Oraciones" class="uk-animation-toggle" tabindex="0" style="display: #{empty completarOracionesControlador.tareaCompletarModeloLista ? 'none' : 'block'}">
+                        <li uk-filter-control=".complete-sentences" uk-tooltip="#{alumno['more.activity.title.complete.prayers']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty completarOracionesControlador.tareaCompletarModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
                     </ul>
