--- a/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
@@ -69,7 +69,9 @@
 
         <div class="uk-section">
             <div class="uk-container ">
-                <h1>Tareas Mapa Mental asigandas</h1>
+                <div>
+                    <div class="titulo-section uk-text-center uk-text-bold uk-margin-bottom">Tareas Mapa Mental Asigandas</div>
+                </div>
                 <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@l uk-child-width-1-2@m" pt:uk-grid="">
                     <ui:repeat value="#{listaMapaMentalControlador.tareaMapaMentalModeloLista}" var="tareaMapaMental">
                         <div class="uk-position-relative">
