--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -132,7 +132,7 @@
         <h:panelGroup layout="block" id="graficas" >
             <ui:repeat value="#{dashboardProfesorControlador.alumnoTareasNivelModeloLista}" var="alumnoTareasNivelModelo">
                 <div>
-                    <span>#{alumnoTareasNivelModelo.idGrupo}</span><span>#{alumnoTareasNivelModelo.idAlumno}</span><span>#{alumnoTareasNivelModelo.idTarea}</span>
+                    <span>#{alumnoTareasNivelModelo.idGrupo}</span><span>#{alumnoTareasNivelModelo.idAlumno}</span>
                     <span>#{alumnoTareasNivelModelo.nombre} #{alumnoTareasNivelModelo.apellidoPaterno} #{alumnoTareasNivelModelo.apellidoMaterno}</span>
                     <span>#{alumnoTareasNivelModelo.totalTareas}</span><span>#{alumnoTareasNivelModelo.nivelLenguaje}</span>
                 </div>
