--- a/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
@@ -33,6 +33,7 @@
 
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/profesor/calificacion.css"/>
+        <h:outputStylesheet library="css" name="/profesor/mapa-mental.css"/>
 
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -62,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="botones uk-width-2-3@m">
+            <div class="boton-regresa uk-width-2-3@m">
                 <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
             </div>
         </div>
