se quita el uk-textprimary

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -72,7 +72,7 @@
                     </div>
                     <div class="uk-card-footer">
                         <h3 class="uk-text-uppercase uk-text-bold">Teacher Training</h3>
-                        <p>Learn more with our free <span class="uk-text-primary">e-squadron courses!</span></p>
+                        <p>Learn more with our free <span class="">e-squadron courses!</span></p>
                     </div>
                 </div>
             </div>
