estilos al boton regresar de cada vista

--- a/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/tarea-alumno.xhtml
@@ -33,6 +33,7 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="tablas.css"/>
         <h:outputStylesheet library="css" name="graficas.css"/>
+        <h:outputStylesheet library="css" name="/profesor/tarea-alumno.css"/>
 
         <!--CARDS WRAPPER-->
         <section class="uk-section uk-section-default uk-section-default uk-padding-remove-top " data-uk-filter="target: .js-filter">
@@ -69,8 +70,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="botones uk-width-2-3@m">
-                        <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
+                    <div class="boton-regresa uk-width-2-3@m">
+                        <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
                     </div>
                 </div>
                 <!--CARDS WRAPPER-->
