--- a/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="boton-regresa uk-width-2-3@m">
-                <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
+                <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
             </div>
         </div>
 
