Muestra de forma correcta el porcentaje de la tarea relacionar oracion

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -64,7 +64,8 @@
                 </div>
             </div>
             <div class="botones uk-width-2-3@m">
-                <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+                <h:button styleClass="boton-escuadron-base" value="regresar" outcome="tablero"/>
+                <h:button styleClass="boton-escuadron-base" value="agregar-csv" outcome="agregar-csv"/>
                 <button class="boton-escuadron-base reporte" data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}" data-grado="#{profesorGrupoControlador.grupoModelo.grado}">reporte</button>
                 <button uk-toggle="target: #modal-nuevo-alumno" class="boton-escuadron-base">agregar</button>
             </div>
