--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -77,11 +77,11 @@
                                         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                             <div class="uk-width-1-1@m uk-text-small text-color-level1 uk-text-bold">
                                                 <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Download"  value="../resources/descargables/#{actividadModelo.idActividad}.pdf" target="_blank"><h:graphicImage styleClass=" uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></h:outputLink></div>
+                                                    <div><h:outputLink pt:data-uk-tooltip="title: Grammar"  value="../resources/descargables/#{actividadModelo.idActividad}.pdf" target="_blank"><h:graphicImage styleClass=" uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></h:outputLink></div>
                                                     <div><h:outputLink pt:data-uk-tooltip="title: Didactic Guide"  value="../resources/guia/#{actividadModelo.idActividad}.pdf" target="_blank" ><h:graphicImage  styleClass=" uk-svg" library="img" name="icono/guia-didactica.svg" pt:uk-svg=""/></h:outputLink></div>
                                                     <div><h:outputLink pt:data-uk-tooltip="title: Cards"  value="../resources/cartas/#{actividadModelo.idActividad}.pdf" target="_blank" ><span uk-icon="icon: commenting"></span></h:outputLink></div>
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Discussion"  value="../resources/platilla/discussion.pdf" target="_blank" ><span uk-icon="icon: file-edit"></span></h:outputLink></div>
-                                                    <div><h:outputLink pt:data-uk-tooltip="title: Lesson"  value="../resources/platilla/lesson.pdf" target="_blank" ><span uk-icon="icon: pencil"></span></h:outputLink></div>
+                                                    <div><h:outputLink pt:data-uk-tooltip="title: Discussion"  value="../resources/plantilla/discussion.pdf" target="_blank" ><span uk-icon="icon: file-edit"></span></h:outputLink></div>
+                                                    <div><h:outputLink pt:data-uk-tooltip="title: Lesson"  value="../resources/plantilla/lesson.pdf" target="_blank" ><span uk-icon="icon: pencil"></span></h:outputLink></div>
                                                 </h:panelGroup>
                                             </div>
                                             <ui:remove>
